5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1671_1105.log
== TEST (2019-04-28 18:46:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao:input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
#por fim o else é se a entrada nao for nenhum brasão


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (nome_brasao == "lobo") :
NameError: name 'nome_brasao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:46:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
#por fim o else é se a entrada nao for nenhum brasão


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (nome_brasao == "lobo") :
NameError: name 'nome_brasao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:53:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
elif (nome_brasao == "leao") :
	print("Entrada: leao")
	print("Casa: Lannister")
elif (nome_brasao == "veado") :
	print("Entrada: veado")
	print("Casa: Baratheon")
elif (nome_brasao == dragao) :
	print("Entrada: dragao")
	print("Casa: Targaryen")
elif (nome_brasao == rosa) :
	print("Entrada: rosa")
	print("Casa: Tyrell")
elif (nome_brasao == sol) :
	print("Entrada: sol")
	print("Casa: Martell")
elif (nome_brasao == lula) :
	print("Entrada: lula")
	print("Casa: Greyjoy")
elif (nome_brasao == esfolado) :
	print("Entrada: esfolado")
	print("Casa: Bolton")
elif (nome_brasao == turta) :
	print("Entrada: turta")
	print("Casa: Tully")
	
else :
	print("Entrada: nome_brasao")
	print("Brasao invalido")

-- EXECUTION TIME:
0.213589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 16, in <module>
    elif (nome_brasao == dragao) :
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:53:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
elif (nome_brasao == "leao") :
	print("Entrada: leao")
	print("Casa: Lannister")
elif (nome_brasao == "veado") :
	print("Entrada: veado")
	print("Casa: Baratheon")
elif (nome_brasao == dragao) :
	print("Entrada: dragao")
	print("Casa: Targaryen")
elif (nome_brasao == rosa) :
	print("Entrada: rosa")
	print("Casa: Tyrell")
elif (nome_brasao == sol) :
	print("Entrada: sol")
	print("Casa: Martell")
elif (nome_brasao == lula) :
	print("Entrada: lula")
	print("Casa: Greyjoy")
elif (nome_brasao == esfolado) :
	print("Entrada: esfolado")
	print("Casa: Bolton")
elif (nome_brasao == turta) :
	print("Entrada: turta")
	print("Casa: Tully")
	
else :
	print("Entrada: nome_brasao")
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    elif (nome_brasao == dragao) :
NameError: name 'dragao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:53:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
elif (nome_brasao == "leao") :
	print("Entrada: leao")
	print("Casa: Lannister")
elif (nome_brasao == "veado") :
	print("Entrada: veado")
	print("Casa: Baratheon")
elif (nome_brasao == dragao) :
	print("Entrada: dragao")
	print("Casa: Targaryen")
elif (nome_brasao == rosa) :
	print("Entrada: rosa")
	print("Casa: Tyrell")
elif (nome_brasao == sol) :
	print("Entrada: sol")
	print("Casa: Martell")
elif (nome_brasao == lula) :
	print("Entrada: lula")
	print("Casa: Greyjoy")
elif (nome_brasao == esfolado) :
	print("Entrada: esfolado")
	print("Casa: Bolton")
elif (nome_brasao == turta) :
	print("Entrada: turta")
	print("Casa: Tully")
	
else :
	print("Entrada: nome_brasao")
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    elif (nome_brasao == dragao) :
NameError: name 'dragao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:54:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
elif (nome_brasao == "leao") :
	print("Entrada: leao")
	print("Casa: Lannister")
elif (nome_brasao == "veado") :
	print("Entrada: veado")
	print("Casa: Baratheon")
elif (nome_brasao == dragao) :
	print("Entrada: dragao")
	print("Casa: Targaryen")
elif (nome_brasao == rosa) :
	print("Entrada: rosa")
	print("Casa: Tyrell")
elif (nome_brasao == sol) :
	print("Entrada: sol")
	print("Casa: Martell")
elif (nome_brasao == lula) :
	print("Entrada: lula")
	print("Casa: Greyjoy")
elif (nome_brasao == esfolado) :
	print("Entrada: esfolado")
	print("Casa: Bolton")
elif (nome_brasao == turta) :
	print("Entrada: turta")
	print("Casa: Tully")
	
else :
	print("Entrada: nome_brasao")
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    elif (nome_brasao == dragao) :
NameError: name 'dragao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:55:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
elif (nome_brasao == "leao") :
	print("Entrada: leao")
	print("Casa: Lannister")
elif (nome_brasao == "veado") :
	print("Entrada: veado")
	print("Casa: Baratheon")
elif (nome_brasao == "dragao") :
	print("Entrada: dragao")
	print("Casa: Targaryen")
elif (nome_brasao == "rosa") :
	print("Entrada: rosa")
	print("Casa: Tyrell")
elif (nome_brasao == "sol") :
	print("Entrada: sol")
	print("Casa: Martell")
elif (nome_brasao == "lula") :
	print("Entrada: lula")
	print("Casa: Greyjoy")
elif (nome_brasao == "esfolado") :
	print("Entrada: esfolado")
	print("Casa: Bolton")
elif (nome_brasao == "turta") :
	print("Entrada: turta")
	print("Casa: Tully")
	
else :
	print("Entrada: nome_brasao")
	print("Brasao invalido")

-- EXECUTION TIME:
0.262054
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: nome_brasao
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:55:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
elif (nome_brasao == "leao") :
	print("Entrada: leao")
	print("Casa: Lannister")
elif (nome_brasao == "veado") :
	print("Entrada: veado")
	print("Casa: Baratheon")
elif (nome_brasao == "dragao") :
	print("Entrada: dragao")
	print("Casa: Targaryen")
elif (nome_brasao == "rosa") :
	print("Entrada: rosa")
	print("Casa: Tyrell")
elif (nome_brasao == "sol") :
	print("Entrada: sol")
	print("Casa: Martell")
elif (nome_brasao == "lula") :
	print("Entrada: lula")
	print("Casa: Greyjoy")
elif (nome_brasao == "esfolado") :
	print("Entrada: esfolado")
	print("Casa: Bolton")
elif (nome_brasao == "turta") :
	print("Entrada: turta")
	print("Casa: Tully")
	
else :
	print("Entrada: nome_brasao")
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:55:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
elif (nome_brasao == "leao") :
	print("Entrada: leao")
	print("Casa: Lannister")
elif (nome_brasao == "veado") :
	print("Entrada: veado")
	print("Casa: Baratheon")
elif (nome_brasao == "dragao") :
	print("Entrada: dragao")
	print("Casa: Targaryen")
elif (nome_brasao == "rosa") :
	print("Entrada: rosa")
	print("Casa: Tyrell")
elif (nome_brasao == "sol") :
	print("Entrada: sol")
	print("Casa: Martell")
elif (nome_brasao == "lula") :
	print("Entrada: lula")
	print("Casa: Greyjoy")
elif (nome_brasao == "esfolado") :
	print("Entrada: esfolado")
	print("Casa: Bolton")
elif (nome_brasao == "turta") :
	print("Entrada: turta")
	print("Casa: Tully")
	
else :
	print("Entrada: nome_brasao")
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:55:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

#Escreva uma progama que leia o brasão(Nomes):
nome_brasao=input("brasao: ")
# Como condição para o if e elif coloque todos os brasões, comparando-as sempre em letras minusculas ou maiusculas.
if (nome_brasao == "lobo") :
	print("Entrada: lobo")
	print("Casa: Stark")
elif (nome_brasao == "leao") :
	print("Entrada: leao")
	print("Casa: Lannister")
elif (nome_brasao == "veado") :
	print("Entrada: veado")
	print("Casa: Baratheon")
elif (nome_brasao == "dragao") :
	print("Entrada: dragao")
	print("Casa: Targaryen")
elif (nome_brasao == "rosa") :
	print("Entrada: rosa")
	print("Casa: Tyrell")
elif (nome_brasao == "sol") :
	print("Entrada: sol")
	print("Casa: Martell")
elif (nome_brasao == "lula") :
	print("Entrada: lula")
	print("Casa: Greyjoy")
elif (nome_brasao == "esfolado") :
	print("Entrada: esfolado")
	print("Casa: Bolton")
elif (nome_brasao == "turta") :
	print("Entrada: turta")
	print("Casa: Tully")
	
else :
	print("Entrada:", nome_brasao)
	print("Brasao invalido")

-- EXECUTION TIME:
0.20708
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
